--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -793,6 +793,7 @@ dtb-$(CONFIG_SOC_AM33XX) += \
 	am335x-baltos-ir5221.dtb \
 	am335x-base0033.dtb \
 	am335x-bone.dtb \
+	am335x-shizen.dtb \
 	am335x-boneblack.dtb \
 	am335x-boneblack-wireless.dtb \
 	am335x-boneblack-pruswuart.dtb \
